# tram-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  manifest.json  pyproject.toml  testrail_mcp.mcpb
.github/workflows/: publish.yml  tag-release.yml  tests.yml
testrail_mcp/: __init__.py  server.py
tests/: conftest.py  test_catalog.py  test_client.py  test_execute.py  test_get_method_info.py  test_list_categories.py  test_search_cases.py
tram_mcp/: __init__.py  server.py
