[project]
name = "tram-mcp"
version = "0.1.0"
description = "MCP server exposing TestRail API endpoints as tools for LLMs"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Matt Troutman", email = "git@trtmn.com" },
]
keywords = ["mcp", "testrail", "testing", "api", "llm", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastmcp>=2.12.4",
    "python-dotenv>=1.1.1",
    "testrail-api-module==0.7.0",
]

[project.urls]
Homepage = "https://github.com/trtmn/tram-mcp"
Repository = "https://github.com/trtmn/tram-mcp"
Issues = "https://github.com/trtmn/tram-mcp/issues"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
tram_mcp = "tram_mcp:main"
